Must Include -XX:-UseJVMCINativeLibrary